# TweakValo

./: LICENSE  README.md  index.html  package.json
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: config.rs  fps_optimizer.rs  game_launcher.rs  gpu_detect.rs  graphics_preset.rs  lib.rs  nvidia_profile.rs  process_director.rs  stretch.rs
src/i18n/: en.ts  th.ts
src/lib/: commands.ts
